<resources>
    <string name="app_name" translatable="false">Location Share</string>

    <string name="share_location">Share</string>
    <string name="copy_location">Copy</string>
    <string name="view_location">View</string>
    <string name="copied">Copied to clipboard</string>
    <string name="getting_location">Getting location…</string>
    <string name="share_location_via">Share location via</string>
    <string name="view_location_via">View location via</string>

    <string name="turn_on_GPS">Turn on GPS</string>
    <string name="permission_denied">GPS permission denied</string>

    <string name="accuracy">Accuracy</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="choose_link">Choose a link type</string>

    <string name="googlemaps" translatable="false">Google Maps</string>
    <string name="openstreetmap" translatable="false">OpenStreetMap</string>
    <string name="geouri" translatable="false">GeoURI</string>

    <string name="tracking" translateble="false">Live Tracking</string>
    <string name="serverAddr" translatable="false">server address</string>

</resources>
