<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/detailsText"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/progressTitle"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_location"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBar"
            android:visibility="visible"
            android:indeterminate="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/gpsButton"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:onClick="openLocationSettings"
            android:text="@string/turn_on_GPS" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareLayout"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/statusLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="shareLocation"
            android:text="@string/share_location" />

        <Button
            android:id="@+id/copyButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="copyLocation"
            android:text="@string/copy_location" />

        <Button
            android:id="@+id/viewButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="viewLocation"
            android:text="@string/view_location" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trackingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shareLayout"
        android:layout_marginTop="11dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackingHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/serverAddr"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/serverAddr" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false" />

        <ProgressBar
            android:id="@+id/lastComms"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="10"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>